<!--
  ~ Copyright (c) 2016 Daniel Campodonico; Emiliano Gioria; Lucas Moretti.
  ~ This file is part of Laboratorio04.
  ~
  ~ Laboratorio04 is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Laboratorio04 is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Laboratorio04.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Laboratorio04</string>
    <string name="title_activity_main2">Reservalo.com</string>

    <string name="navigation_drawer_open">Mostrar Opciones</string>
    <string name="navigation_drawer_close">Ocultar Opciones</string>
    <string name="busqueda_finalizada">Búsqueda finalizada.</string>

    <string name="tv_fecha_inicio">Fecha de inicio de alquiler</string>
    <string name="tv_fecha_fin">Fecha de fin de alquiler</string>

    <string name="action_settings">Configuración</string>

    <string name="texto_reserva_aceptada">Su reserva del%1$s en %2$s desde el %3$s hasta el %4$s ha sido aceptada!</string>
    <string name="titulo_reserva_aceptada">Reserva aceptada!</string>
    <string name="preferencias">Preferencias</string>
    <string name="opcionUsuario_title">Nombre de usuario</string>
    <string name="opcionUsuario_summary">Android Studio</string>
    <string name="opcionUsuario_default">Android Studio</string>
    <string name="opcionCorreo_title">Correo electrónico</string>
    <string name="opcionCorreo_default">android.studio@android.com</string>
    <string name="opcionCorreo_summary">android.studio@android.com</string>
    <string name="opcionCorreo_error">El correo ingresado es inválido!</string>
    <string name="opcionRingtone_title">Ringtone</string>
    <string name="opcionRingtone_summary">Ringtone</string>
    <string name="opcionRingtone_default">content://settings/system/notification_sound</string>
</resources>
