<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Daniel Campodonico; Emiliano Gioria; Lucas Moretti.
  ~ This file is part of Laboratorio04.
  ~
  ~ Laboratorio04 is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Laboratorio04 is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Laboratorio04.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferencias">

    </PreferenceCategory>
    <EditTextPreference
        android:key="opcionUsuario"
        android:title="@string/opcionUsuario_title"
        android:summary="@string/opcionUsuario_summary"
        android:capitalize="words"
        android:dialogTitle="@string/opcionUsuario_title"
        android:defaultValue="@string/opcionUsuario_default">

    </EditTextPreference>

    <EditTextPreference
        android:key="opcionCorreo"
        android:title="@string/opcionCorreo_title"
        android:summary="@string/opcionCorreo_summary"
        android:dialogTitle="@string/opcionCorreo_title"
        android:defaultValue="@string/opcionCorreo_default">

    </EditTextPreference>

    <RingtonePreference
        android:key="opcionRingtone"
        android:title="@string/opcionRingtone_title"
        android:showSilent="true"
        android:ringtoneType="notification"
        android:summary="@string/opcionRingtone_summary"
        android:defaultValue="@string/opcionRingtone_default">


    </RingtonePreference>
</PreferenceScreen>